dashboard and patient api created
